objects/Batch_Interface_Param__c.object
<CustomObject>
    <description>Parameters for Batch Interfaces</description>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Character_Encoding__c</fullName>
        <description>Character Encoding</description>
        <label>Character Encoding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_capture_date__c</fullName>
        <description>system time during the execution start</description>
        <label>Current capture date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>Entity or interface name</description>
        <label>Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Batch_no__c</fullName>
        <description>Current processed batch number</description>
        <label>Interface Batch no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_SFDC_Date_format__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>To generate Parameter for SFDC Dateformat</description>
        <label>Is SFDC Date format</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Capture_date__c</fullName>
        <description>Last capture date</description>
        <label>Last Capture date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Id__c</fullName>
        <label>Notification Email Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_10_Name__c</fullName>
        <label>Param 10 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_10_Value__c</fullName>
        <label>Param 10 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_1_Name__c</fullName>
        <label>Param 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_1__c</fullName>
        <label>Param 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_2_Name__c</fullName>
        <description>Param 2 Name</description>
        <label>Param 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_2__c</fullName>
        <label>Param 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_3__c</fullName>
        <label>Param 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_6_Value__c</fullName>
        <label>Param 6 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_7_Value__c</fullName>
        <label>Param 7 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <description>Informatica Session Name</description>
        <label>Session Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_system_key__c</fullName>
        <description>Source system key of the entity</description>
        <label>Source system key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Date__c</fullName>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Date</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Interface Param</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Instance_Name__c</columns>
        <columns>Last_Capture_date__c</columns>
        <columns>Notification_Email_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Interface Params</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>